# take-notes

./: .gitmodules  CMakeLists.txt  EXAMPLE.txt  README.md
.github/workflows/: build.yml
src/: editor.cpp  editor.hpp  file_exp.cpp  file_exp.hpp  main.cpp  markup.cpp  markup.hpp  utility.cpp  utility.hpp
